--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
     "@react-oauth/google": "^0.12.1",
+    "bcryptjs": "^2.4.3",
     "flowbite-react": "^0.7.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
