--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
     "@react-oauth/google": "^0.12.1",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "flowbite-react": "^0.7.2",
     "leaflet": "^1.9.4",
@@ -42,6 +44,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^5.2.8"
   }
 }
