--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.11.0",
     "flowbite-react": "^0.7.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
